# MA_dt_quadrotor

./: CMakeLists.txt  cmd.md  package.xml  readme.md
launch/: default.launch
scripts/: mavlink_shell_simulation.py  read_sensor.py
src/: digital_twin.cpp  dynamic_model_quad.cpp  env_node.cpp  physical_entity.cpp
